# nimg

./: .gitignore  CMakeLists.txt  README.md  binding.gyp  index.d.ts  index.js  nimg.cpp  package-lock.json  package.json  test.cpp
lib/jpeg/: CMakeLists.txt
lib/png/: CMakeLists.txt
lib/zlib/: CMakeLists.txt
modules/: FindImageMagick.cmake
test/: test.js
